推荐数据修改

--- a/CMS.AdminUI/Views/DataBlock/Edit.cshtml
+++ b/CMS.AdminUI/Views/DataBlock/Edit.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "编辑数据块";
 }
 @model CMS.Domain.DataBlock
-           
+           <link href="/Content/css/table.css" rel="stylesheet" type="text/css" />
 @section submenu{
     <ul>
         <li><h3><a href="@Url.Action("Index", "Template")" class="house">模板管理</a></h3>
