--- a/CMS.AdminUI/Views/Global/Index.cshtml
+++ b/CMS.AdminUI/Views/Global/Index.cshtml
@@ -7,6 +7,7 @@
 @model Webdiyer.WebControls.Mvc.PagedList<CMS.Domain.GlobalVariable>
 <link href="/Content/themes/base/jquery.ui.all.css" rel="stylesheet" type="text/css"/>
 <link href="/Content/themes/base/jquery.ui.dialog.css" rel="stylesheet" type="text/css"/>
+                                             <link href="/Content/css/table.css" rel="stylesheet" type="text/css" />
 @section submenu{
     <ul>
         <li><h3><a href="@Url.Action("Index", "Template")" class="house">模板管理</a></h3>
