--- a/CMS.AdminUI/Views/Global/SelGlobal.cshtml
+++ b/CMS.AdminUI/Views/Global/SelGlobal.cshtml
@@ -10,6 +10,7 @@
     <title>选择全局变量</title>
     <link href="@Url.Content("~/Content/css/admin_theme.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/css/style.css")" rel="stylesheet" type="text/css" />
+    <link href="/Content/css/table.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div id="box" style="background-color:#fff;">
