--- a/CMS.AdminUI/Views/Global/Var.cshtml
+++ b/CMS.AdminUI/Views/Global/Var.cshtml
@@ -7,6 +7,7 @@
     <title>全局变量选择</title>
     <link href="@Url.Content("~/Content/css/admin_theme.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/css/style.css")" rel="stylesheet" type="text/css" />
+    <link href="/Content/css/table.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div id="box">
