--- a/CMS.AdminUI/Views/Module/Index.cshtml
+++ b/CMS.AdminUI/Views/Module/Index.cshtml
@@ -5,6 +5,7 @@
 <link href="/Content/themes/base/jquery.ui.all.css" rel="stylesheet" type="text/css"/>
 <link href="/Content/themes/base/jquery.ui.dialog.css" rel="stylesheet" type="text/css"/>
 <link href="/Content/Dynatree/jquery.contextMenu.css" rel="stylesheet" type="text/css"/>
+<link href="/Content/css/table.css" rel="stylesheet" type="text/css" />
 @section submenu{
     <ul>
         <li><h3><a href="@Url.Action("Index", "Role")" class="house">角色权限</a></h3>
