--- a/CMS.AdminUI/Views/PagerSet/Add.cshtml
+++ b/CMS.AdminUI/Views/PagerSet/Add.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "添加分页配置信息";
 }
-           
+           <link href="/Content/css/table.css" rel="stylesheet" type="text/css" />
 @section submenu{
     <ul>
         <li><h3><a href="@Url.Action("Index", "Template")" class="house">模板管理</a></h3>
