--- a/CMS.AdminUI/Views/PagerSet/Edit.cshtml
+++ b/CMS.AdminUI/Views/PagerSet/Edit.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "编辑分页设置";
 }
 @model CMS.Domain.PagerInfo
-           
+       <link href="/Content/css/table.css" rel="stylesheet" type="text/css" />    
 @section submenu{
     <ul>
         <li><h3><a href="@Url.Action("Index", "Template")" class="house">模板管理</a></h3>
