--- a/CMS.AdminUI/Views/Role/Index.cshtml
+++ b/CMS.AdminUI/Views/Role/Index.cshtml
@@ -6,6 +6,7 @@
 <link href="/Content/Dynatree/ui.dynatree.css" rel="stylesheet" type="text/css"/>
 <link href="/Content/easyui/default/easyui.css" rel="stylesheet" type="text/css"/>
 <link href="/Content/easyui/icon.css" rel="stylesheet" type="text/css"/>
+                <link href="/Content/css/table.css" rel="stylesheet" type="text/css" />
 @section submenu{
   <ul id="ulRoleList" style="margin-left:10px;">
     <li><h3><a href="javascript:void(0);" class="group">角色列表</a></h3></li>
