--- a/CMS.AdminUI/Views/Special/Add.cshtml
+++ b/CMS.AdminUI/Views/Special/Add.cshtml
@@ -2,6 +2,7 @@
     ViewBag.Title = "新建专题";
 }
 @model CMS.Domain.SpecialInfo
+<link href="/Content/css/table.css" rel="stylesheet" type="text/css" />
 @section submenu{
     <ul>
         <li><h3><a href="@Url.Action("Index", "Special")" class="house">专题管理</a></h3>
