--- a/CMS.AdminUI/Views/Special/Index.cshtml
+++ b/CMS.AdminUI/Views/Special/Index.cshtml
@@ -5,6 +5,7 @@
 @using CMS.Domain
 @using Webdiyer.WebControls.Mvc
 @model Webdiyer.WebControls.Mvc.PagedList<SpecialInfo>
+                                             <link href="/Content/css/table.css" rel="stylesheet" type="text/css" />
 @section submenu{
     <ul>
         <li><h3><a href="@Url.Action("Index", "Special")" class="house">专题管理</a></h3>
