--- a/CMS.AdminUI/Views/Special/SelSpecial.cshtml
+++ b/CMS.AdminUI/Views/Special/SelSpecial.cshtml
@@ -7,6 +7,7 @@
     <title>选择专题</title>
     <link href="@Url.Content("~/Content/css/admin_theme.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/css/style.css")" rel="stylesheet" type="text/css" />
+    <link href="/Content/css/table.css" rel="stylesheet" type="text/css" />
     <link href="/Content/Dynatree/ui.dynatree.css" rel="stylesheet" type="text/css"/>
     <link href="/Content/themes/base/jquery.ui.all.css" rel="stylesheet" type="text/css"/>
     <link href="/Content/themes/base/jquery.ui.dialog.css" rel="stylesheet" type="text/css"/>
