--- a/CMS.AdminUI/Views/Special/SpecialChannel.cshtml
+++ b/CMS.AdminUI/Views/Special/SpecialChannel.cshtml
@@ -10,6 +10,7 @@
     <link href="@Url.Content("~/Content/css/style.css")" rel="stylesheet" type="text/css" />
     <link href="/Content/themes/base/jquery.ui.all.css" rel="stylesheet" type="text/css"/>
     <link href="/Content/themes/base/jquery.ui.dialog.css" rel="stylesheet" type="text/css"/>
+    <link href="/Content/css/table.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div id="box" style="background-color:#fff;">
