--- a/CMS.AdminUI/Views/User/EditPwd.cshtml
+++ b/CMS.AdminUI/Views/User/EditPwd.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "修改密码";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<link href="/Content/css/table.css" rel="stylesheet" type="text/css" />
 @section submenu{
     <ul>
         <li><h3><a href="/role/" class="house">角色权限</a></h3>
