--- a/CMS.AdminUI/Views/User/Index.cshtml
+++ b/CMS.AdminUI/Views/User/Index.cshtml
@@ -7,6 +7,7 @@
 @model CMS.AdminUI.Models.UserPageModel
 <link href="/Content/themes/base/jquery.ui.all.css" rel="stylesheet" type="text/css"/>
 <link href="/Content/themes/base/jquery.ui.dialog.css" rel="stylesheet" type="text/css"/>
+<link href="/Content/css/table.css" rel="stylesheet" type="text/css" />
 @section submenu{
     <ul>
         <li><h3><a href="@Url.Action("Index", "Role")" class="house">角色权限</a></h3>
