--- a/CMS.AdminUI/Views/Index/Index.cshtml
+++ b/CMS.AdminUI/Views/Index/Index.cshtml
@@ -2,6 +2,7 @@
     ViewBag.Title = "梦都酒家管理后台";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<link href="/Content/css/table.css" rel="stylesheet" type="text/css" />
 @section submenu{
       
 }
