--- a/CMS.AdminUI/Views/Recommend/Index.cshtml
+++ b/CMS.AdminUI/Views/Recommend/Index.cshtml
@@ -7,6 +7,7 @@
 @model Webdiyer.WebControls.Mvc.PagedList<RecommedInfoList>
 <link href="/Content/themes/base/jquery.ui.all.css" rel="stylesheet" type="text/css"/>
 <link href="/Content/themes/base/jquery.ui.dialog.css" rel="stylesheet" type="text/css"/>
+                                             <link href="/Content/css/table.css" rel="stylesheet" type="text/css" />
 @section submenu{
     <ul>
         <li><h3><a href="@Url.Action("Index", "Position")" class="house">推荐位置管理</a></h3></li>
