--- a/CMS.AdminUI/Views/Template/Index.cshtml
+++ b/CMS.AdminUI/Views/Template/Index.cshtml
@@ -4,80 +4,84 @@
 }
 @using Webdiyer.WebControls.Mvc
 @model PagedList<CMS.Domain.TemplateInfo>
-<link href="/Content/themes/base/jquery.ui.all.css" rel="stylesheet" type="text/css"/>
-@section submenu{
-    <ul>
-        <li><h3><a href="@Url.Action("Index", "Template")" class="house">模板管理</a></h3>
-            <ul>
-                <li><a href="@Url.Action("Index", "DataBlock")" class="manage">数据块管理</a></li>
-                <li><a href="@Url.Action("Index", "Global")" class="pagenew">全局变量管理</a></li>
-                <li><a href="@Url.Action("Index", "PagerSet")" class="pagenew">分页信息设置</a></li>
-            </ul>
-        </li>
-	</ul>  
-}
-<div id="content">
-    <div id="box">
-        <h3>模板管理</h3>
-        <div style="margin:5px;">
-            <form id="frmSearch" method="post" action="/Template/">
+    <link href="/Content/themes/base/jquery.ui.all.css" rel="stylesheet" type="text/css" />
+    <link href="/Content/css/table.css" rel="stylesheet" type="text/css" />
+    @section submenu{
+        <ul>
+            <li>
+                <h3><a href="@Url.Action("Index", "Template")" class="house">模板管理</a></h3>
+                <ul>
+                    <li><a href="@Url.Action("Index", "DataBlock")" class="manage">数据块管理</a></li>
+                    <li><a href="@Url.Action("Index", "Global")" class="pagenew">全局变量管理</a></li>
+                    <li><a href="@Url.Action("Index", "PagerSet")" class="pagenew">分页信息设置</a></li>
+                </ul>
+            </li>
+        </ul>
+    }
+    <div id="content">
+        <div id="box">
+            <h3>模板管理</h3>
+            <div style="margin:5px;">
+                <form id="frmSearch" method="post" action="/Template/">
+                    <table width="100%">
+                        <tr>
+                            <td style="width:70px;text-align:right;">模板ID：</td>
+                            <td><input type="text" id="txtTemplateID" style="width:60px;" name="ID" value="@ViewData["ID"]" /></td>
+                            <td style="width:70px;text-align:right;">模板名称：</td>
+                            <td><input type="text" id="txtTemplateName" name="Name" value="@ViewData["Name"]" /></td>
+                            <td style="width:70px;text-align:right;">模板类型：</td>
+                            <td><select id="selTemplateType" name="Type" style="width:160px;"><option value="0">-请选择-</option><option value="1">栏目模板</option><option value="2">菜品模板</option><option value="3">列表页模板</option><option value="4">专题模板</option><option value="5">其他模板</option></select></td>
+                            <td><button type="submit" id="btnSearch"> 搜 索 </button></td>
+                        </tr>
+                    </table>
+                </form>
+            </div>
+            <div style="margin:5px;"><a href="@Url.Action("Add", "Template")"><img src="@Url.Content("~/Content/img/icons/add.png")" style="vertical-align:middle;" width="16" height="16" align="middle" />新建模板</a></div>
             <table width="100%">
-                <tr>
-                    <td style="width:70px;text-align:right;">模板ID：</td>
-                    <td><input type="text" id="txtTemplateID" style="width:60px;" name="ID" value="@ViewData["ID"]" /></td>
-                    <td style="width:70px;text-align:right;">模板名称：</td>
-                    <td><input type="text" id="txtTemplateName" name="Name" value="@ViewData["Name"]" /></td>
-                    <td style="width:70px;text-align:right;">模板类型：</td>
-                    <td><select id="selTemplateType" name="Type" style="width:160px;"><option value="0">-请选择-</option><option value="1">栏目模板</option><option value="2">文章模板</option><option value="3">列表页模板</option><option value="4">专题模板</option><option value="5">其他模板</option></select></td>
-                    <td><button type="submit" id="btnSearch"> 搜 索 </button></td>
-                </tr>
-            </table>
-            </form>
-        </div>
-        <div style="margin:5px;"><a href="@Url.Action("Add", "Template")"><img src="@Url.Content("~/Content/img/icons/add.png")" style="vertical-align:middle;" width="16" height="16" align="middle" />新建模板</a></div>
-        <table width="100%">
-            <thead>
-                <tr style="height:22px;">
-                    <th width="50px"><a href="javascript:void(0);">模板ID</a></th>
-                    <th width="200px"><a href="javascript:void(0);">模板名称</a></th>
-                    <th width="100px"><a href="javascript:void(0);">模板类型</a></th>
-                    <th width="100px"><a href="javascript:void(0);">模板状态</a></th>
-                    <th><a href="javascript:void(0);">创建时间</a></th>
-                    <th width="70px"><a href="javascript:void(0);">操作</a></th>
-                </tr>
-            </thead>
-            <tbody>
-                @if (Model != null)
-                {
-                    if (Model.Count == 0)
+                <thead>
+                    <tr style="height:22px;">
+                        <th width="50px"><a href="javascript:void(0);">模板ID</a></th>
+                        <th width="200px"><a href="javascript:void(0);">模板名称</a></th>
+                        <th width="100px"><a href="javascript:void(0);">模板类型</a></th>
+                        <th width="100px"><a href="javascript:void(0);">模板状态</a></th>
+                        <th><a href="javascript:void(0);">创建时间</a></th>
+                        <th width="70px"><a href="javascript:void(0);">操作</a></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @if (Model != null)
+                    {
+                        if (Model.Count == 0)
                         {
                             <tr>
                                 <td colspan="6" align="center">没有搜索到数据</td>
                             </tr>
                         }
-                    foreach (CMS.Domain.TemplateInfo item in Model)
-                    {
-                        <tr>
-                            <td class="a-center">@item.ID</td>
-                            <td><a href="/Template/Edit?TemplateID=@item.ID">@item.Name</a></td>
-                            <td align="center">@item.TypeName</td>
-                            <td align="center">@item.StatusName</td>
-                            <td align="center">@item.CreateTime.Value.ToString("yyyy-MM-dd HH:mm:ss")</td>
-                            <td align="center">
-                                <a href="/Template/Edit?TemplateID=@item.ID"><img src="@Url.Content("~/Content/img/edit.png")" alt="编辑模板" title="编辑模板" width="16" height="16" style="margin-right: 10px;" />
-                                </a>
-                                <a href="javascript:void(0);" onclick="DelTemplate('@item.ID');"><img src="@Url.Content("~/Content/img/cancel.png")" alt="删除模板" title="删除模板" width="16" height="16" />
-                                </a>
-                            </td>
-                        </tr>
+                        foreach (CMS.Domain.TemplateInfo item in Model)
+                        {
+                            <tr>
+                                <td class="a-center">@item.ID</td>
+                                <td><a href="/Template/Edit?TemplateID=@item.ID">@item.Name</a></td>
+                                <td align="center">@item.TypeName</td>
+                                <td align="center">@item.StatusName</td>
+                                <td align="center">@item.CreateTime.Value.ToString("yyyy-MM-dd HH:mm:ss")</td>
+                                <td align="center">
+                                    <a href="/Template/Edit?TemplateID=@item.ID">
+                                        <img src="@Url.Content("~/Content/img/edit.png")" alt="编辑模板" title="编辑模板" width="16" height="16" style="margin-right: 10px;" />
+                                    </a>
+                                    <a href="javascript:void(0);" onclick="DelTemplate('@item.ID');">
+                                        <img src="@Url.Content("~/Content/img/cancel.png")" alt="删除模板" title="删除模板" width="16" height="16" />
+                                    </a>
+                                </td>
+                            </tr>
+                        }
                     }
-                }
-            </tbody>
-        </table>
-        <div id="pager">@Html.Pager(Model, new PagerOptions { PageIndexParameterName = "PageIndex", PagerItemsSeperator = "", CurrentPagerItemWrapperFormatString = "<span class=\"current\">{0}</span>" }, new { id = "flickrpager" })</div>
+                </tbody>
+            </table>
+            <div id="pager">@Html.Pager(Model, new PagerOptions { PageIndexParameterName = "PageIndex", PagerItemsSeperator = "", CurrentPagerItemWrapperFormatString = "<span class=\"current\">{0}</span>" }, new { id = "flickrpager" })</div>
+        </div>
     </div>
-</div>
-<script type="text/javascript">
-var TemplateType = @ViewData["Type"]
-</script>
-<script src="/Scripts/page/template.page.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        var TemplateType = @ViewData["Type"]
+    </script>
+    <script src="/Scripts/page/template.page.js" type="text/javascript"></script>
