--- a/CMS.AdminUI/Views/Template/SelTemplate.cshtml
+++ b/CMS.AdminUI/Views/Template/SelTemplate.cshtml
@@ -7,6 +7,7 @@
     <title>选择模板</title>
     <link href="@Url.Content("~/Content/css/admin_theme.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/css/style.css")" rel="stylesheet" type="text/css" />
+    <link href="/Content/css/table.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 @using Webdiyer.WebControls.Mvc
