--- a/CMS.AdminUI/Views/User/SelUser.cshtml
+++ b/CMS.AdminUI/Views/User/SelUser.cshtml
@@ -9,6 +9,7 @@
     <title>用户选择</title>
     <link href="@Url.Content("~/Content/css/admin_theme.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/css/style.css")" rel="stylesheet" type="text/css" />
+    <link href="/Content/css/table.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div id="box">
