--- a/CMS.AdminUI/Views/DataBlock/Add.cshtml
+++ b/CMS.AdminUI/Views/DataBlock/Add.cshtml
@@ -72,7 +72,7 @@
                         </tr>
                         <tr id="trRecommendPositionList" style="display:none;">
                             <td>推荐位置：</td>
-                            <td colspan="2"><select id="selRecommendPosition" style="width:195px;"></select><input type="hidden" id="hiddenWhereValue" /></td>
+                            <td colspan="2"><select id="selRecommendPosition" style="width:195px;"></select><input type="hidden" id="hiddenWhereValue" name="PositionID" /></td>
                         </tr>
                         <tr>
                             <td width="250px">属性：<select id="selFieldCondition" style="width:200px;"><option value="">请选择</option></select></td>
@@ -94,12 +94,12 @@
                 <td align="right">取几条记录：</td>
                 <td><input type="text" id="txtRowCount" name="RowCount" style="width:300px;" /> <span class="red">*</span></td>
             </tr>
-            <tr>
+            @*<tr>
                 <td height="25" bgcolor="#ffffff" align="right">使用模板：</td>
                 <td bgcolor="#ffffff">
                     <input type="text" id="txtTemplateName" style="width:300px;"/> <span class="red">*</span><img src="/content/img/icons/select.png" style="vertical-align:middle;height:20px;cursor:pointer" id="selTemplate" title="选择模板" alt="选择模板" /><input type="hidden" id="hiddenTemplateID" value="0" name="TemplateID" />
                 </td>
-            </tr>
+            </tr>*@
             <tr>
                 <td align="right">说明：</td>
                 <td><textarea id="txtNote" name="Note" cols="50" rows="3"></textarea></td>
