--- a/CMS.AdminUI/Views/Shared/_Layout.cshtml
+++ b/CMS.AdminUI/Views/Shared/_Layout.cshtml
@@ -50,8 +50,8 @@
                     <li>
                         <h3><a href="#" class="user">系统功能</a></h3>
                         <ul>
-                            <li><a href="@Url.Action("EditPwd","User")">密码修改</a></li>
-                            <li><a href="@Url.Action("Logout","User")">退出系统</a></li>
+                            <li><a href="@Url.Action("EditPwd","User")" class="lockedit">密码修改</a></li>
+                            <li><a href="@Url.Action("Logout","User")" class="logout">退出系统</a></li>
                         </ul>
                     </li>
                 </ul>
