--- a/CMS.AdminUI/Views/Template/Edit.cshtml
+++ b/CMS.AdminUI/Views/Template/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "编辑模板";
+    ViewBag.Title = Convert.ToInt32(ViewData["Type"]) == 6 ? "编辑区块" : "编辑模板";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @model CMS.Domain.TemplateInfo
@@ -9,91 +9,133 @@
     <ul>
         <li><h3><a href="@Url.Action("Index", "Template")" class="house">模板管理</a></h3>
             <ul>
+                <li><a href="@Url.Action("Index", "Template",new {type=6})" class="layoutcontent">区块管理</a></li>
                 <li><a href="@Url.Action("Index", "DataBlock")" class="manage">数据块管理</a></li>
                 <li><a href="@Url.Action("Index", "Global")" class="pagenew">全局变量管理</a></li>
+                <li><a href="@Url.Action("Index", "PagerSet")" class="pager">分页信息设置</a></li>
             </ul>
         </li>
 	</ul>  
 }
 <div id="content">
-    <div id="box">
-        <h3>编辑模板</h3>
-        <table width="100%">
-			<tbody>
-             <tr>
-                <td height="25" bgcolor="#ffffff" style="width:60px;">模板名称：</td>
-                <td bgcolor='ffffff'>@Html.TextBoxFor(m => m.Name, new Dictionary<string, object>() { { "id", "txtName" }, { "name", "Name" }, { "class", "input-txt" } })</td>
-             </tr>
-             <tr>
-                <td height="25" bgcolor="#ffffff">模板类型：</td>
-                <td bgcolor='ffffff'><select id="selType" name="Type" style="width: 257px;"><option value="">--请选择--</option><option value="1">栏目模板</option><option value="2">菜品模板</option><option value="3">列表页模板</option><option value="4">专题模板</option><option value="5">其他模板</option></select></td>
-             </tr>
-             <tr>
-                <td height="25" bgcolor="#ffffff">模板内容：</td>
-                <td bgcolor='ffffff'>
-                <table width="100%">
-			        <tbody>
+    @if (Convert.ToInt32(ViewData["Type"]) == 6)
+    {
+        <div id="box">
+            <h3>编辑区块</h3>
+            <table width="100%">
+                <tbody>
                     <tr>
-                        <td width="33%"><img src="@Url.Content("~/Content/img/icons/bricks_gear.png")" title="选择系统变量" alt="选择系统变量" style="vertical-align:middle;margin-right:2px;" width="16" height="16" align="middle" /><a href="javascript:void(0);" id="aSelSystemVar"><b>选择系统变量</b></a></td>
-                        <td width="33%"><img src="@Url.Content("~/Content/img/icons/page_white_edit.png")" title="选择全局变量" alt="选择全局变量" style="vertical-align:middle;margin-right:2px;" width="16" height="16" align="middle" /><a href="javascript:void(0);" id="aSelGlobalVar"><b>选择全局变量</b></a></td>
-                        <td width="33%"><img src="@Url.Content("~/Content/img/icons/folder_table.png")" title="选择数据块" alt="选择数据块" style="vertical-align:middle;margin-right:2px;" width="16" height="16" align="middle" /><a href="javascript:void(0);" id="aSelDataBlock"><b>选择数据块</b></a></td>
+                        <td height="25" bgcolor="#ffffff" style="width: 60px;">区块名称：</td>
+                        <td bgcolor='ffffff'>@Html.TextBoxFor(m => m.Name, new Dictionary<string, object>() {{"id", "txtName"}, {"name", "Name"}, {"class", "input-txt"}})</td>
+                        <input type="hidden" name="Type" id="selType" value="6" />
                     </tr>
-                    <tr id="trContentField" style="display:none;">
-                        <td colspan="2">菜品属性：
-                            <select id="selContentField" name="ContentField">
-                                <option value="">--请选择--</option>
-                                <option value="NewsID">菜品ID</option>
-                                <option value="Title">菜品标题</option>
-                                <option value="Author">菜品作者</option>
-                                <option value="Source">菜品来源</option>
-                                <option value="Tags">菜品关键字</option>
-                                <option value="Summary">菜品简介</option>
-                                <option value="Content">菜品内容</option>
-                                <option value="PublicTime">发表时间</option>
-                            </select>
-                        </td>
-                        <td width="33%"></td>
-                    </tr>
-                    <tr id="trListField" style="display:none;">
-                        <td>分页数据标签：<span id="spanPagerDataList" style="cursor:pointer;" title="点击添加">${PagerDataList}</span></td>
-                        <td>分页页码标签：<span id="spanPagerNumInfo" style="cursor:pointer;" title="点击添加">${PagerNumInfo}</span></td>
-                        <td width="33%"></td>
-                    </tr>
-                    <tr id="trSpecialField" style="display:none;">
-                        <td colspan="3">专题属性：
-                            <select id="selSpecialField" name="SpecialField">
-                                <option value="">--请选择--</option>
-                                <option value="ID">专题ID</option>
-                                <option value="Name">专题名称</option>
-                                <option value="SmallPicUrl">缩略图</option>
-                                <option value="PicUrl">标题图</option>
-                                <option value="Keyword">关键字</option>
-                                <option value="Description">专题简介</option>                                
-                                <option value="CreateTime">创建时间</option>
-                            </select>
-                            &nbsp;<span id="spanSpecialChannel" style="cursor:pointer;" onclick="SetSpecialChannel('${SC-C?-?}');">${SC-C?-?}:专题模块，第一个？表示的是专题栏目ID，该标签会自动列出专题栏目下的所有菜品，第二个？表示取几条记录</span>
+                    <tr>
+                        <td height="25" bgcolor="#ffffff">区块内容：</td>
+                        <td bgcolor='ffffff'>
+                            <table width="100%">
+                                <tbody>
+                                    <tr>
+                                        <td colspan="3">
+                                            <textarea id="txtTemplateContent" rows="20" cols="78">@Model.TemplateCode</textarea>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </td>
                     </tr>
                     <tr>
-                        <td colspan="3">
-                             <textarea id="txtTemplateContent" rows="20" cols="78">@Model.TemplateCode</textarea>
+                        <td height="25" bgcolor="#ffffff">区块状态：</td>
+                        <td bgcolor='ffffff'><input type="radio" value="0" name="radioStatus" id="radioStop" />停用 &nbsp;<input type="radio" value="1" name="radioStatus" id="radioStart" />启用</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><button id="btnEditTemplate" type="button"><img src="/content/img/icons/add.png" style="vertical-align: middle;" alt="保存" title="保存"/>保存</button>&nbsp;<button id="btnReset"  type="reset"><img src="/content/img/icons/reset.png" style="vertical-align: middle;" alt="重置" title="重置"/>重置</button></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    }
+    else
+    {
+        <div id="box">
+            <h3>编辑模板</h3>
+            <table width="100%">
+                <tbody>
+                    <tr>
+                        <td height="25" bgcolor="#ffffff" style="width: 60px;">模板名称：</td>
+                        <td bgcolor='ffffff'>@Html.TextBoxFor(m => m.Name, new Dictionary<string, object>() {{"id", "txtName"}, {"name", "Name"}, {"class", "input-txt"}})</td>
+                    </tr>
+                    <tr>
+                        <td height="25" bgcolor="#ffffff">模板类型：</td>
+                        <td bgcolor='ffffff'><select id="selType" name="Type" style="width: 257px;"><option value="">--请选择--</option><option value="1">栏目模板</option><option value="2">菜品模板</option><option value="3">列表页模板</option><option value="4">专题模板</option><option value="5">其他模板</option></select></td>
+                    </tr>
+                    <tr>
+                        <td height="25" bgcolor="#ffffff">模板内容：</td>
+                        <td bgcolor='ffffff'>
+                            <table width="100%">
+                                <tbody>
+                                    <tr>
+                                        <td width="33%"><img src="@Url.Content("~/Content/img/icons/bricks_gear.png")" title="选择系统变量" alt="选择系统变量" style="vertical-align: middle; margin-right: 2px;" width="16" height="16" align="middle" /><a href="javascript:void(0);" id="aSelSystemVar"><b>选择系统变量</b></a></td>
+                                        <td width="33%"><img src="@Url.Content("~/Content/img/icons/page_white_edit.png")" title="选择全局变量" alt="选择全局变量" style="vertical-align: middle; margin-right: 2px;" width="16" height="16" align="middle" /><a href="javascript:void(0);" id="aSelGlobalVar"><b>选择全局变量</b></a></td>
+                                        <td width="33%"><img src="@Url.Content("~/Content/img/icons/folder_table.png")" title="选择数据块" alt="选择数据块" style="vertical-align: middle; margin-right: 2px;" width="16" height="16" align="middle" /><a href="javascript:void(0);" id="aSelDataBlock"><b>选择数据块</b></a></td>
+                                    </tr>
+                                    <tr id="trContentField" style="display: none;">
+                                        <td colspan="2">菜品属性：
+                                            <select id="selContentField" name="ContentField">
+                                                <option value="">--请选择--</option>
+                                                <option value="NewsID">菜品ID</option>
+                                                <option value="Title">菜品标题</option>
+                                                <option value="Author">菜品作者</option>
+                                                <option value="Source">菜品来源</option>
+                                                <option value="Tags">菜品关键字</option>
+                                                <option value="Summary">菜品简介</option>
+                                                <option value="Content">菜品内容</option>
+                                                <option value="PublicTime">发表时间</option>
+                                            </select>
+                                        </td>
+                                        <td width="33%"></td>
+                                    </tr>
+                                    <tr id="trListField" style="display: none;">
+                                        <td>分页数据标签：<span id="spanPagerDataList" style="cursor: pointer;" title="点击添加">${PagerDataList}</span></td>
+                                        <td>分页页码标签：<span id="spanPagerNumInfo" style="cursor: pointer;" title="点击添加">${PagerNumInfo}</span></td>
+                                        <td width="33%"></td>
+                                    </tr>
+                                    <tr id="trSpecialField" style="display: none;">
+                                        <td colspan="3">专题属性：
+                                            <select id="selSpecialField" name="SpecialField">
+                                                <option value="">--请选择--</option>
+                                                <option value="ID">专题ID</option>
+                                                <option value="Name">专题名称</option>
+                                                <option value="SmallPicUrl">缩略图</option>
+                                                <option value="PicUrl">标题图</option>
+                                                <option value="Keyword">关键字</option>
+                                                <option value="Description">专题简介</option>                                
+                                                <option value="CreateTime">创建时间</option>
+                                            </select>
+                                            &nbsp;<span id="spanSpecialChannel" style="cursor: pointer;" onclick=" SetSpecialChannel('${SC-C?-?}'); ">${SC-C?-?}:专题模块，第一个？表示的是专题栏目ID，该标签会自动列出专题栏目下的所有菜品，第二个？表示取几条记录</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="3">
+                                            <textarea id="txtTemplateContent" rows="20" cols="78">@Model.TemplateCode</textarea>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </td>
                     </tr>
-                    </tbody>
-                </table>
-                </td>
-             </tr>
-             <tr>
-                <td height="25" bgcolor="#ffffff">模板状态：</td>
-                <td bgcolor='ffffff'><input type="radio" value="0" name="radioStatus" id="radioStop" />停用 &nbsp;<input type="radio" value="1" name="radioStatus" id="radioStart" />启用</td>
-             </tr>
-             <tr>
-                <td></td>
-                <td><button id="btnEditTemplate" type="button"><img src="/content/img/icons/add.png" style="vertical-align:middle;" alt="保存" title="保存"/>保存</button>&nbsp;<button id="btnReset"  type="reset"><img src="/content/img/icons/reset.png" style="vertical-align:middle;" alt="重置" title="重置"/>重置</button></td>
-             </tr>
-			</tbody>
-		</table>
-    </div>
+                    <tr>
+                        <td height="25" bgcolor="#ffffff">模板状态：</td>
+                        <td bgcolor='ffffff'><input type="radio" value="0" name="radioStatus" id="radioStop" />停用 &nbsp;<input type="radio" value="1" name="radioStatus" id="radioStart" />启用</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><button id="btnEditTemplate" type="button"><img src="/content/img/icons/add.png" style="vertical-align: middle;" alt="保存" title="保存"/>保存</button>&nbsp;<button id="btnReset"  type="reset"><img src="/content/img/icons/reset.png" style="vertical-align: middle;" alt="重置" title="重置"/>重置</button></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    }
 </div>
 <script src="/Scripts/jquery-ui-1.8.11.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="/scripts/page/page.common.js"></script>
